Updated admin limit to 1000

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="card shadow">
         <div class="card-header bg-dark text-white">
-            Global Transaction Log (Last 50)
+            Global Transaction Log (Last 1000 Entries)
         </div>
         <div class="card-body">
             <div class="table-responsive">
